<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.1</version>
  </parent>
  <groupId>org.games</groupId>
  <artifactId>game_server</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>game_server</name>
  <url>http://maven.apache.org</url>
  <modules>
    <module>gate</module>
    <module>users</module>
    <module>logics</module>
    <module>auth</module>
    <module>config</module>
    <module>bus</module>
    <module>common</module>
    <module>common/command</module>
    <module>common/event</module>
    <module>common/constant</module>
    <module>common/message</module>
    <module>monitor</module>
    <module>common/logic-sc-xlch</module>
    <module>common/logic-sc-xzdd</module>
    <module>common/logic-ddz</module>
    <module>common/model-mahjong-tile</module>
    <module>common/model-poker-card</module>
    <module>common/event-netty-impl</module>
    <module>common/server-support</module>
  </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

  <dependencyManagement>
    <dependencies>
<!--      <dependency>-->
<!--        <groupId>junit</groupId>-->
<!--        <artifactId>junit</artifactId>-->
<!--        <version>3.8.1</version>-->
<!--        <scope>test</scope>-->
<!--      </dependency>-->
      <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-all</artifactId>
        <version>4.1.111.Final</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.apache.mina/mina-core -->
      <dependency>
        <groupId>org.apache.mina</groupId>
        <artifactId>mina-core</artifactId>
        <version>2.2.3</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.apache.mina/mina-http -->
      <dependency>
        <groupId>org.apache.mina</groupId>
        <artifactId>mina-http</artifactId>
        <version>2.2.3</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.11.0</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.17.2</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>2.2.224</version>
        <scope>test</scope>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
      <dependency>
        <groupId>com.rabbitmq</groupId>
        <artifactId>amqp-client</artifactId>
        <version>5.21.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.3</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
